--- a/vignettes/mverse_intro_glmmodelling.Rmd
+++ b/vignettes/mverse_intro_glmmodelling.Rmd
@@ -62,7 +62,7 @@ references:
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,  fig.width=7, fig.height=4
+  collapse = TRUE,  fig.width = 7, fig.height = 4
 )
 ```
 
@@ -110,11 +110,11 @@ The distribution of `alldeaths` is shown below.
 
 
 ```{r}
-hurricane |> 
-  ggplot(aes(alldeaths)) + 
-  geom_histogram(bins = 25) + 
+hurricane |>
+  ggplot(aes(alldeaths)) +
+  geom_histogram(bins = 25) +
   stat_bin(
-    aes(label = after_stat(count)), bins = 25, 
+    aes(label = after_stat(count)), bins = 25,
     geom = "text", vjust = -.7, size = 2
   )
 ```
@@ -122,10 +122,10 @@ hurricane |>
 It looks like there are a few outliers.  Let's find out the names of these hurricanes.
 
 ```{r}
-hurricane |> 
-  filter(alldeaths > median(alldeaths)) |> 
-  arrange(desc(alldeaths)) |> 
-  select(Name, alldeaths) |> 
+hurricane |>
+  filter(alldeaths > median(alldeaths)) |>
+  arrange(desc(alldeaths)) |>
+  select(Name, alldeaths) |>
   head()
 ```
 
@@ -133,9 +133,11 @@ hurricane |>
 `filter_branch()` can be used to exclude outliers. Excluding hurricane `Katrina` or `Audrey` removes the hurricanes with the most deaths.
 
 ```{r filter_branch}
-death_outliers <- filter_branch(none = TRUE, 
-                                Katrina = Name != 'Katrina',
-                                KatrinaAudrey = !(Name %in% c('Katrina', 'Audrey')))
+death_outliers <- filter_branch(
+  none = TRUE,
+  Katrina = Name != "Katrina",
+  KatrinaAudrey = !(Name %in% c("Katrina", "Audrey"))
+)
 ```
 
 Now, let's add this branch to `hurricane_mv`.
@@ -152,14 +154,14 @@ summary(hurricane_mv)
 Consider two different definitions of femininity: `Gender_MF` is a binary classification of gender, and `MasFem` is a continuous rating of Femininity.
 
 ```{r mutate_branch}
-femininity <- mutate_branch(binary = Gender_MF, 
+femininity <- mutate_branch(binary = Gender_MF,
                             continuous = MasFem)
 ```
 
 Consider normalized damage (`NDAM`) and the log of `NDAM`.
 
 ```{r}
-damage <- mutate_branch(original = NDAM, 
+damage <- mutate_branch(original = NDAM,
                         log = log(NDAM))
 ```
 
@@ -228,7 +230,7 @@ Each model has three rows, each corresponding to a summary of a model coefficien
 The specification curve for the coefficient of `femininity` is shown below.
 
 ```{r, fig.height=8}
-spec_summary(hurricane_mv, var = "femininity") |> 
+spec_summary(hurricane_mv, var = "femininity") |>
   spec_curve(label = "code", spec_matrix_spacing = 4) +
   labs(colour = "Significant at 0.05") +
   theme(legend.position = "top")
@@ -239,9 +241,16 @@ spec_summary(hurricane_mv, var = "femininity") |>
 The assumption that `alldeaths` follows a Normal distribution is tenuous, but transforming the `alldeaths` using $t(x)=\log(x+1)$ could result in a dependent variable that is closer to a Normal distribution.
 
 ```{r}
-hurricane |> ggplot(aes(sample = alldeaths)) + stat_qq() + stat_qq_line()
+hurricane |>
+  ggplot(aes(sample = alldeaths)) +
+  stat_qq() +
+  stat_qq_line()
 
-hurricane |> mutate(logd = log(alldeaths+1)) |> ggplot(aes(sample = logd)) + stat_qq() + stat_qq_line()
+hurricane |>
+  mutate(logd = log(alldeaths + 1)) |>
+  ggplot(aes(sample = logd)) +
+  stat_qq() +
+  stat_qq_line()
 ```
 
 
@@ -252,19 +261,19 @@ hurricane_mv <- create_multiverse(hurricane)
 
 dep_var <- mutate_branch(alldeaths, log(alldeaths + 1))
 
-femininity <- mutate_branch(binary_gender = Gender_MF, 
+femininity <- mutate_branch(binary_gender = Gender_MF,
                             cts_gender = MasFem)
 
-damage <- mutate_branch(damage_orig = NDAM, 
+damage <- mutate_branch(damage_orig = NDAM,
                         damage_log = log(NDAM))
 
 models <- formula_branch(dep_var ~ damage + femininity)
 
 distributions <- family_branch(poisson, gaussian)
 
-hurricane_mv <- hurricane_mv |> 
+hurricane_mv <- hurricane_mv |>
   add_mutate_branch(dep_var, femininity, damage) |>
-  add_formula_branch(models) |> 
+  add_formula_branch(models) |>
   add_family_branch(distributions)
 
 ```
@@ -301,7 +310,7 @@ summary(hurricane_mv)
 A summary of the 24 models on the `femininity` coefficients is shown in the specification curve.
 
 ```{r fig.height=8}
-spec_summary(hurricane_mv, var = "femininity") |> 
+spec_summary(hurricane_mv, var = "femininity") |>
   spec_curve(label = "code", spec_matrix_spacing = 4) +
   labs(colour = "Significant at 0.05") +
   theme(legend.position = "top")
@@ -317,17 +326,17 @@ First, let's setup the multiverse of analyses.
 ```{r}
 hurricane_nb_mv <- create_multiverse(hurricane)
 
-femininity <- mutate_branch(binary_gender = Gender_MF, 
+femininity <- mutate_branch(binary_gender = Gender_MF,
                             cts_gender = MasFem)
 
-damage <- mutate_branch(damage_orig = NDAM, 
+damage <- mutate_branch(damage_orig = NDAM,
                         damage_log = log(NDAM))
 
 models <- formula_branch(alldeaths ~ damage + femininity)
 
-hurricane_nb_mv <- hurricane_nb_mv |> 
+hurricane_nb_mv <- hurricane_nb_mv |>
   add_mutate_branch(femininity, damage) |>
-  add_formula_branch(models) 
+  add_formula_branch(models)
 ```
 
 A summary of `hurricane_nb_mv` shows the four models in the multiverse.
@@ -347,7 +356,7 @@ summary(hurricane_nb_mv)
 Finally, we can plot the specification curve. 
 
 ```{r fig.height=8}
-spec_summary(hurricane_nb_mv, var = "femininity") |> 
+spec_summary(hurricane_nb_mv, var = "femininity") |>
   spec_curve(label = "code", spec_matrix_spacing = 4) +
   labs(colour = "Significant at 0.05") +
   theme(legend.position = "top")
