updated DESCRIPTION with dependency versions; added rhubv2 GitHub workflow; labelled noRd internal functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -107,6 +107,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/mverseanalysis/mverse/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/mverseanalysis/mverse/actions/workflows/R-CMD-check.yaml)
 [![codecove](https://codecov.io/gh/mverseanalysis/mverse/branch/master/graph/badge.svg)](https://app.codecov.io/gh/mverseanalysis/mverse?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/mverseanalysis/mverse/graph/badge.svg)](https://app.codecov.io/gh/mverseanalysis/mverse)
 <!-- badges: end -->
 
 _mverse_ is an extension to multiverse package [@multiverseR]
